Time: 1 ms (91.12%), Space: 41.2 MB (26.78%) - LeetHub