@@ -5,24 +5,19 @@ class Solution {
             Time: O(n^2), Extra Space: O(1)
         */
         List<List<Integer>> res = new ArrayList<>();
-        res.add(new ArrayList<>(List.of(1)));
+        res.add(Collections.singletonList(1));
 
-        for(int i = 1; i < numRows; i++){
-            List<Integer> local = new ArrayList<>();
+        for (int i = 1; i < numRows; i++) {
+            List<Integer> prevRow = res.get(i - 1);
+            List<Integer> currentRow = new ArrayList<>(i + 1);
 
-            for(int j = 0; j <= i; j++){
-                int a = 0, b = 0;
-
-                if(j - 1 >= 0)
-                    a = res.get(i - 1).get(j - 1);
-
-                if(j < res.get(i - 1).size())
-                    b = res.get(i - 1).get(j);
-
-                local.add(a + b);
+            for (int j = 0; j <= i; j++) {
+                int left = (j - 1 >= 0) ? prevRow.get(j - 1) : 0;
+                int right = (j < prevRow.size()) ? prevRow.get(j) : 0;
+                currentRow.add(left + right);
             }
 
-            res.add(local);
+            res.add(currentRow);
         }
         
         return res;
